--- a/page.html
+++ b/page.html
@@ -10,10 +10,7 @@
   <body class=" ">
     <main class="flex justify-center">
       <div class="bg-indigo-950 flex flex-col h-screen justify-between w-[700px]">
-        <div class="flex flex-col items-center bg-cyan-600">
-          <h1 class="text-white text-xl mt-2">Expenses Of May</h1>
-          <span class="border-2 w-40 mt-1"></span>
-        </div>
+        <div class="flex flex-col items-center bg-cyan-600 header-box"></div>
         <div class="flex justify-evenly border-b-2 pb-4 mt-5 mb-6">
           <button class="bg-gray-100   text-slate-900 p-2 rounded-lg" onclick="addNewDay()">ADD A NEW DAY</button>
           <button class=" bg-gray-100   text-slate-900 p-2 rounded-lg" onclick="removeADay()">REMOVE A DAY</button>
