updated the data schema for localstorage by month

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main class="bg-blue-900 pb-5">
       <div class="flex flex-wrap pt-10 gap-2 text-center justify-around container"></div>
     </main>
+    <script src="./utils.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
