--- a/page.html
+++ b/page.html
@@ -25,4 +25,4 @@
       </div>
     </div>
   </body>
-</html></div><script src="./page.js"></script></body></html></main></body></html>
+</html></div><script src="./utils.js"></script><script src="./page.js"></script></body></html></main></body></html>
