--- a/page.html
+++ b/page.html
@@ -9,7 +9,7 @@
   </head>
   <body class=" ">
     <main class="flex justify-center">
-      <div class="bg-indigo-950 flex flex-col h-screen justify-between w-[700px]">
+      <div class="bg-indigo-950 flex flex-col h-[80vh] justify-between w-[700px]">
         <div class="flex flex-col items-center bg-cyan-600 header-box"></div>
         <div class="flex justify-evenly border-b-2 pb-4 mt-5 mb-6">
           <button class="bg-gray-100   text-slate-900 p-2 rounded-lg" onclick="addNewDay()">ADD A NEW DAY</button>
@@ -20,7 +20,8 @@
         <div class="flex justify-center p-2 bg-black">
           <h2 class="text-white w-2/3 h-10 border-2 text-center p-1 ">Total expense
           </h2>
-          <input type="number" readonly class=" outline-none text-slate-950 w-1/3 border-2 border-white text-center" id="total-cost">
+
+          <input type="number" min="1" max="31" readonly class=" outline-none text-slate-950 w-1/3 border-2 border-white text-center" id="total-cost">
         </div>
       </div>
     </div>
